# astrolol

./: .dockerignore  .gitignore  BUGS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
astrolol/: app.py  main.py  plugin.py
astrolol/api/: devices.py  filter_wheel.py  focuser.py  imager.py  indi.py  inventory.py  mount.py  profiles.py  properties.py  settings.py  static.py
astrolol/config/: logging_setup.py  settings.py  user_settings.py
astrolol/core/: errors.py  mem_guard.py  plugin_api.py
astrolol/devices/: config.py  manager.py  registry.py
astrolol/equipment/: __init__.py  models.py  store.py
astrolol/filter_wheel/: __init__.py  manager.py
astrolol/focuser/: __init__.py  manager.py
astrolol/imaging/: __init__.py  imager.py  models.py  preview.py
astrolol/mount/: __init__.py  manager.py
astrolol/profiles/: models.py  store.py
docs/: indi-testing-notes.md
plugins/: __init__.py
plugins/autofocus/: algorithms.py  api.py  engine.py  models.py  plugin.py  star_detector.py
plugins/hello/: api.py  plugin.py
plugins/lx200/: api.py  plugin.py  server.py  settings.py
plugins/object_resolver/: api.py  catalog.py  plugin.py  settings.py  simbad.py  solar_system.py
plugins/phd2/: api.py  client.py  events.py  models.py  plugin.py  settings.py
plugins/platesolve/: __init__.py  api.py  events.py  models.py  plugin.py  settings.py  solver.py
plugins/sequencer/: api.py  (+6 more)
tests/: conftest.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+116 files in other folders)
