[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrolol"
version = "0.1.0"
description = "Headless, modular, open-source astronomy platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pluggy>=1.4",
    "structlog>=24.0",
    "astropy>=6.0",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.scripts]
astrolol = "astrolol.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.9",
    "ruff>=0.4",
]
indi = [
    "pyindi-client>=2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
omit = ["tests/*"]
